# trie

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  install.sh  test.sh  uninstall.sh
include/: Trie.h  TrieNode.h  trie  trie.h  trie_node.h
src/: Trie.cpp  TrieNode.cpp  trie.cpp  trie_node.cpp
test/: CMakeLists.txt  Test_Trie.cpp
